auto-test/tests/chapter_18/invalid_types/invalid_incomplete_structs/deref_incomplete_struct_pointer.c
struct s;

struct s *ptr = 0;

int main(void) {
  
  
  *ptr;
  return 0;
}